--- a/portfoliobtssio/html/index.html
+++ b/portfoliobtssio/html/index.html
@@ -6,8 +6,8 @@
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CLAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" href="/css/common.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2024)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
@@ -48,14 +48,14 @@
                 à l'école IPSSI Paris.<br>
                 Fan de jeux vidéo je me suis tourné vers les jeux PC et nous avons tous connu les fameux problèmes de connexion. De fil en aiguille entre les films les proches et la curiosité je me suis tourné vers le domaine qui m'interessais le plus : Le systeme et Réseau
             </p>
-            <a href="clairon-anthony-cv (1).pdf" class="button" download="clairon-anthony-cv">  
+            <a href="/img/clairon-anthony-cv (1).pdf (1).pdf" class="button" download="clairon-anthony-cv.pdf">  
                 <span>Télécharger mon CV</span>
             </a>
         </div>
         <h2>BTS SIO c'est quoi?</h2>
             <p>Le BTS SIO (Service Informatique aux Organisations) est un programme de niveau Bac+2, qui forme des informaticiens aussi bien doués pour le développement que pour l’administration et la maintenance d’un réseau informatique.</p>
         <h2>Qu'est-ce que l'Option SISR </h2>  
-            <article>Le BTS SIO SISR (Solution d’Infrastructure Système et Réseau), est une option du BTS SIO qui a pour but de former des techniciens réseau polyvalents. Les lauréats de ce programme ont toutes les compétences nécessaires pour la gestion et la maintenance du réseau d’une entreprise. Ils peuvent également intervenir quant à l’achat du matériel réseau employé en négociant directement avec les fournisseurs</article>
+            <article>Le BTS SIO SISR (Solution d'Infrastructure Système et Réseau), est une option du BTS SIO qui a pour but de former des techniciens réseau polyvalents. Les lauréats de ce programme ont toutes les compétences nécessaires pour la gestion et la maintenance du réseau d’une entreprise. Ils peuvent également intervenir quant à l’achat du matériel réseau employé en négociant directement avec les fournisseurs</article>
         <h2>Qu'est-ce que l'Option SLAM</h2>    
             <article>Le BTS SIO SLAM (Solutions Logicielles et Application Métiers), est un parcours dédiés aux passionnés du développement logiciel. Durant leurs deux années d’études, les étudiants apprennent à rédiger un cahier des charges, développer des applications et assurer leur intégration dans les systèmes informatisés de la société.</article>
         <h2 id="Competence">Competence</h2>
