--- a/portfoliobtssio/html/veille_technologique.html
+++ b/portfoliobtssio/html/veille_technologique.html
@@ -32,7 +32,7 @@
                 </button>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
+                <a class="nav-link active" aria-current="page" onclick="location.href='#Veille'">Veille Technologique</a>
             </li>
             <li class="nav-item">
                 <button class="nav-link" aria-current="page" href="contact.html">
@@ -42,7 +42,7 @@
         </ul>
     </header>
     <h1>Les renseignement utilisé sont extrait et obtenu grace a google alerte et un flux RSS Feedly</h1>
-    <section  class="Veille" h1 title="Veilles technologiques">
+    <section  id="Veille" h1 title="Veilles technologiques">
         <section h2>
             <article>
                 <h2>l'utilisation de la technologie de la blockchaine</h2><br>
