--- a/portfoliobtssio/html/parcours.html
+++ b/portfoliobtssio/html/parcours.html
@@ -20,10 +20,10 @@
                 <a class="nav-link" aria-current="page" href="index.html">Présentation</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
+                <a class="nav-link active" aria-current="page" onclick="location.href='parcours.html'">Parcours Scolaire et Professionnel</a>
             </li>
             <li class="nav-item">
-                <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                <button class="nav-link" aria-current="page" href="projet.html">
                     Projet
                 </button>
             </li>
