--- a/portfoliobtssio/html/contact.html
+++ b/portfoliobtssio/html/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Contact</title>
 </head>
@@ -40,11 +40,11 @@
             <p><strong>Téléphone:</strong> +33 1 01 01 01 01</p>
             <p><strong>Email:</strong> claironanthony@gmail.com</p>
         </div>
-        <form action="mailto:your_email@example.com" method="post" enctype="text/plain">
+        <form action="mailto:a.clairon@ecole-ipssi.net" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Votre nom" required><br>
             <input type="email" name="email" placeholder="Votre Email" required><br>
             <textarea name="message" placeholder="Votre Message" required></textarea><br>
-            <button class="button" type="submit" value="Envoyer le Message"></button>
+            <a class="button" type="submit" value="Envoyer le Message"><span>Envoyer le message</span></a>
         </form>
     </div>
 </body>
